2006-06-01  Pierangelo Masarati <masarati@aero.polimi.it>

	* Cleanup suggested by Paul <paul_c AT tuxcnc DOT org>
	  (mostly GNUmakefile.am install paths; silence warnings;
	  add #!bin/sh to scripts and so).

2006-05-31  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/sched/sys.c: safer return to user space of what returned by 
	  rt_gettimeorig.

2006-05-30  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/sched/api.c: fixed wrong priority changed, that did not allow
	  less prioritary changes.

2006-05-23  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* addons/rtdm/rtdm_driver.h: fixed wrong test in 
	  rtdm_strncpy_from_user.

2006-05-23  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* testsuite/user/switches/switches.c and 
	* testsuite/kern/switches/switches.c: added taskswitching time 
	  measures for intertask rpc/receive/return.

2006-05-14  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/i386/hal/hal.immed: make available module parms for 
	  either printing or not fpu init/trap warnings, default is no.

2006-05-11  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_lxrt.h: fixed unused stack allocation when 
	  rt_thread_create, user space only, uses clone.
	* base/arch/i386/Kconfig: present direct vectoring and scheduling 
	  configuration options unconditionally.

2006-05-08  Bernd Gassmann <gassmann@fzi.de>

	* base/sched/sched.c: export switch_time for independent use, but 
	  only if execution time monitoring is configured.

2006-05-08  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/rtmain.c: Fit new xrtailab with automatic Log.

2006-05-07  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/matlab/setup.m: Automatically compile the C-Mex S-Function.
	Thanks to Arno and Giampy.

2006-05-05  Bernd Gassmann <gassmann@fzi.de>

	* base/include/rtai_sched.h: add declaration of periodic_resume_time
	  in task structure.
	* base/sched/api.c and sched.c: keep an independent resume time in