@@ -833,6 +833,13 @@ config RTAI_RTDM
 	help
 	Real Time Drive Model specific implementation for RTAI.
 
+config RTAI_RTDM_FD_MAX
+	depends on RTAI_RTDM
+	string "Number of RTDM file descriptors"
+	default 128
+	help
+	The maximum number of file descriptors in RTDM.
+
 menu "Drivers"
 
 config RTAI_DRIVERS_SERIAL
