@@ -729,6 +729,21 @@ if test x$CONFIG_RTAI_SCHED_LXRT_NUMSLOTS = x ; then
 fi
 AC_MSG_RESULT($CONFIG_RTAI_SCHED_LXRT_NUMSLOTS)
 
+AC_MSG_CHECKING(for maximum file descriptors in RTDM)
+AC_ARG_ENABLE(rtdm-fd-max,
+	      [ --enable-rtdm-fd-max        	Set maximum number of RTDM file descriptor slots],
+	[case "$enableval" in
+ changequote(,)dnl
+	[0-9]*) CONFIG_RTAI_RTDM_FD_MAX=$enableval ;;
+ changequote([,])dnl
+	*) AC_MSG_ERROR([Bad argument to option: --enable-rtdm-fd-max=<number>]) ;;
+	esac])
+if test x$CONFIG_RTAI_RTDM_FD_MAX = x ; then
+  # Use a reasonable default if unset
+  CONFIG_RTAI_RTDM_FD_MAX=128
+fi
+AC_MSG_RESULT($CONFIG_RTAI_RTDM_FD_MAX)
+
 AC_MSG_CHECKING(for in-kernel C++ support)
 AC_ARG_ENABLE(cplusplus,
 	[ --enable-cplusplus	Build in-kernel C++ support],
@@ -1217,6 +1232,7 @@ test x$CONFIG_RTAI_LONG_TIMED_LIST = xy && AC_DEFINE(CONFIG_RTAI_LONG_TIMED_LIST
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_SCHED_8254_LATENCY,$CONFIG_RTAI_SCHED_8254_LATENCY,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_SCHED_APIC_LATENCY,$CONFIG_RTAI_SCHED_APIC_LATENCY,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_SCHED_LXRT_NUMSLOTS,$CONFIG_RTAI_SCHED_LXRT_NUMSLOTS,[Kconfig])
+AC_DEFINE_UNQUOTED(CONFIG_RTAI_RTDM_FD_MAX,$CONFIG_RTAI_RTDM_FD_MAX,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_CAL_FREQS_FACT,$CONFIG_RTAI_CAL_FREQS_FACT,[Kconfig])
 
 case $CONFIG_RTAI_MONITOR_EXECTIME in
